--- a/Task1/app/src/main/res/values/strings.xml
+++ b/Task1/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Zadanie 1</string>
+    <string name="app_name">Task 1</string>
     <string name="logo">Полученные данные!</string>
-    <string name="logo2">Получить данные!</string>
+    <string name="logoData">Получить данные!</string>
     <string name="user">UserId</string>
     <string name="id">Id</string>
     <string name="title">Title</string>
